--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,14 @@
     <div id="result-container">
       <h2>불일치 데이터</h2>
       <ul id="result-list"></ul>
+      <form id="result-from">
+        <label for="result-month-input">월:</label>
+        <input type="number" id="result-month-input" name="month">
+        <button type="button" id="result-button">조회</button>
+      </form>
     </div>
   </div>
 
-  <script src="index.js"></script>
+  <script src="client.js"></script>
 </body>
 </html>
